--- a/package.json
+++ b/package.json
@@ -2,14 +2,30 @@
   "name": "ogo",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "nx serve",
+    "serve": "nx serve",
+    "test": "nx test",
+    "test:all": "nx run-many --target=test --all",
+    "lint": "nx lint",
+    "lint:all": "nx run-many --target=lint --all",
+    "clean": "nx clear-cache && rm -rf dist/ && nx run-many --target=clean --all"
+  },
   "private": true,
   "dependencies": {
     "@nrwl/next": "15.5.3",
+    "@tanstack/react-query": "^4.20.0",
+    "@trpc/client": "^10.8.1",
+    "@trpc/next": "^10.8.1",
+    "@trpc/react-query": "^10.8.1",
+    "@trpc/server": "^10.8.1",
     "next": "13.1.1",
+    "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "superjson": "1.9.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.14.5",
@@ -21,12 +37,14 @@
     "@nrwl/web": "15.5.3",
     "@nrwl/workspace": "15.5.3",
     "@testing-library/react": "13.4.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
     "@typescript-eslint/parser": "^5.36.1",
+    "autoprefixer": "10.4.13",
     "babel-jest": "28.1.1",
     "cypress": "^12.2.0",
     "eslint": "~8.15.0",
@@ -40,9 +58,12 @@
     "jest": "28.1.1",
     "jest-environment-jsdom": "28.1.1",
     "nx": "15.5.3",
+    "postcss": "8.4.19",
     "prettier": "^2.6.2",
+    "prettier-plugin-tailwindcss": "^0.2.1",
     "react-test-renderer": "18.2.0",
     "sass": "1.55.0",
+    "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
     "typescript": "~4.8.2"
