--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
+    "build": "nx build",
     "start": "nx serve",
     "serve": "nx serve",
     "test": "nx test",
@@ -19,12 +20,13 @@
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
+    "@vercel/edge-config": "^0.1.1",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tslib": "^2.3.0",
     "superjson": "1.9.1",
+    "tslib": "^2.3.0",
     "zod": "^3.20.2"
   },
   "devDependencies": {
