middleware to read edge config and redirect if entry exists - middleware runs on go/:path+

--- a/apps/ogo-webapp/.env.example
+++ b/apps/ogo-webapp/.env.example
@@ -10,3 +10,6 @@
 # More info: https://next-auth.js.org/configuration/options#secret
 # NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:4200
+
+# Edge Config: https://vercel.com/docs/concepts/edge-network/edge-config/get-started
+EDGE_CONFIG=
