--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nrwl/next": "15.5.3",
     "@tanstack/react-query": "^4.20.0",
+    "@tanstack/react-query-devtools": "^4.22.0",
     "@trpc/client": "^10.8.1",
     "@trpc/next": "^10.8.1",
     "@trpc/react-query": "^10.8.1",
