--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,13 +19,16 @@
               }
             ]
           }
-        ]
+        ],
+        "prettier/prettier": "warn"
       }
     },
     {
       "files": ["*.ts", "*.tsx"],
       "extends": ["plugin:@nrwl/nx/typescript"],
-      "rules": {}
+      "rules": {
+        "@typescript-eslint/no-unused-vars": ["warn", { "varsIgnorePattern": "^_", "argsIgnorePattern": "^_" }]
+      }
     },
     {
       "files": ["*.js", "*.jsx"],
