create new golink RPC, edge API call, and modal

--- a/apps/ogo-webapp/.env.example
+++ b/apps/ogo-webapp/.env.example
@@ -11,5 +11,15 @@
 # NEXTAUTH_SECRET=
 NEXTAUTH_URL=http://localhost:4200
 
-# Edge Config: https://vercel.com/docs/concepts/edge-network/edge-config/get-started
-EDGE_CONFIG=
+EDGE_CONFIG_ID=
+# This variable must be set for the Edge Config SDK!
+# See: https://vercel.com/docs/concepts/edge-network/edge-config/edge-config-sdk#setting-up-the-sdk
+EDGE_CONFIG=https://edge-config.vercel.com/$EDGE_CONFIG_ID?token=<YOUR_TOKEN_HERE>
+
+# Vercel API token is required to update the edge config.
+# Generate a Vercel API token: https://vercel.com/account/tokens
+# Make sure to scope it to your team, if deployed in a Vercel team
+# Docs: https://vercel.com/docs/integrations/vercel-api-overview#scope-of-your-access-token
+VERCEL_API_TOKEN=
+# Optional: include your Vercel team ID if the edge config is scoped to a team.
+VERCEL_TEAM_ID=
