--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "private": true,
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@nrwl/next": "15.5.3",
     "@tanstack/react-query": "^4.20.0",
     "@tanstack/react-query-devtools": "^4.22.0",
