--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,11 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {},
+    "paths": {
+      "@/backend/edge-config": ["libs/backend/edge-config/src/index.ts"],
+      "@/constants": ["libs/shared/constants/src/index.ts"],
+      "@/types": ["libs/shared/types/src/index.ts"]
+    },
     "strict": true
   },
   "exclude": ["node_modules", "tmp"]
