--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@trpc/react-query": "^10.8.1",
     "@trpc/server": "^10.8.1",
     "@vercel/edge-config": "^0.1.1",
+    "fuzzysort": "^2.0.4",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
     "react": "18.2.0",
