--- a/apps/webapp/project.json
+++ b/apps/webapp/project.json
@@ -1,20 +1,22 @@
 {
-  "name": "ogo-webapp",
+  "name": "webapp",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "apps/ogo-webapp",
+  "sourceRoot": "apps/webapp",
   "projectType": "application",
   "targets": {
     "build": {
       "executor": "@nrwl/next:build",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
-        "root": "apps/ogo-webapp",
-        "outputPath": "dist/apps/ogo-webapp"
+        "root": "apps/webapp",
+        "outputPath": "dist/apps/webapp"
       },
       "configurations": {
         "development": {
-          "outputPath": "apps/ogo-webapp"
+          "outputPath": "apps/webapp"
         },
         "production": {}
       }
@@ -23,16 +25,16 @@
       "executor": "@nrwl/next:server",
       "defaultConfiguration": "development",
       "options": {
-        "buildTarget": "ogo-webapp:build",
+        "buildTarget": "webapp:build",
         "dev": true
       },
       "configurations": {
         "development": {
-          "buildTarget": "ogo-webapp:build:development",
+          "buildTarget": "webapp:build:development",
           "dev": true
         },
         "production": {
-          "buildTarget": "ogo-webapp:build:production",
+          "buildTarget": "webapp:build:production",
           "dev": false
         }
       }
@@ -40,22 +42,28 @@
     "export": {
       "executor": "@nrwl/next:export",
       "options": {
-        "buildTarget": "ogo-webapp:build:production"
+        "buildTarget": "webapp:build:production"
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
-        "jestConfig": "apps/ogo-webapp/jest.config.ts",
+        "jestConfig": "apps/webapp/jest.config.ts",
         "passWithNoTests": true
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/ogo-webapp/**/*.{ts,tsx,js,jsx}"]
+        "lintFilePatterns": [
+          "apps/webapp/**/*.{ts,tsx,js,jsx}"
+        ]
       }
     }
   },
