--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "license": "MIT",
   "scripts": {
     "build": "nx build",
+    "dev": "nx serve",
     "start": "nx serve",
     "serve": "nx serve",
     "test": "nx test",
@@ -26,6 +27,7 @@
     "fuzzysort": "^2.0.4",
     "next": "13.1.1",
     "next-auth": "^4.18.7",
+    "plasmo": "0.64.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
@@ -43,8 +45,9 @@
     "@nrwl/workspace": "15.5.3",
     "@testing-library/react": "13.4.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "@types/chrome": "^0.0.210",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.36.1",
@@ -72,6 +75,7 @@
     "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2"
+    "typescript": "~4.8.2",
+    "url-loader": "^4.1.1"
   }
 }
