--- a/apps/browser-extension/package.json
+++ b/apps/browser-extension/package.json
@@ -14,7 +14,7 @@
     ],
     "permissions": [
       "declarativeNetRequest",
-      "declarativeNetRequestFeedback",
+      "storage",
       "tabs"
     ],
     "commands": {
