--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@nrwl/react": "15.5.3",
     "@nrwl/web": "15.5.3",
     "@nrwl/workspace": "15.5.3",
+    "@tailwindcss/forms": "^0.5.3",
     "@testing-library/react": "13.4.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "@types/chrome": "^0.0.210",
