--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "clean": "turbo clean",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
+  "dependencies": {
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
+    "lucide-react": "^0.300.0",
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7"
+  },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@repo/typescript-config": "workspace:*",
     "eslint": "^8.54.0",
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
-    "@repo/typescript-config": "workspace:*",
-    "turbo": "latest"
+    "turbo": "^1.11.2"
   },
   "packageManager": "pnpm@8.9.0",
   "engines": {
