--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -29,5 +29,9 @@
     "tailwindcss": "^3.3.5",
     "tsup": "^8.0.1",
     "typescript": "^5.3.2"
+  },
+  "dependencies": {
+    "clsx": "^2.0.0",
+    "tailwind-merge": "^2.2.0"
   }
 }
