--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -6,8 +6,10 @@
   ],
   "exports": {
     "./styles.css": "./dist/index.css",
-    "./card": "./src/card.tsx"
+    ".": "./src/index.ts"
   },
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "license": "MIT",
   "scripts": {
     "build": "tailwindcss -i ./src/styles.css -o dist/index.css",
