adds tailwind to browser extension - abstracts global stylesheet to ui package

--- a/apps/browser-extension/package.json
+++ b/apps/browser-extension/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "ogo",
+  "name": "browser-extension",
   "displayName": "ogo: open-source go links",
   "version": "0.0.1",
   "description": "Free, open-source go links built with Next.js and Supabase. Easy to self-host.",
-  "author": "Jeff Huang <jeff.huang62@gmail.com>",
+  "author": "jzxhuang",
   "scripts": {
     "dev": "plasmo dev",
     "build": "plasmo build",
     "test": "plasmo test"
   },
   "dependencies": {
+    "@repo/ui": "workspace:*",
     "plasmo": "0.84.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@repo/ui": "workspace:*",
+    "@repo/eslint-config": "workspace:*",
+    "@repo/tailwind-config": "workspace:*",
     "@types/chrome": "0.0.251",
     "@types/node": "20.9.0",
     "@types/react": "18.2.37",
-    "@types/react-dom": "18.2.15"
+    "@types/react-dom": "18.2.15",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   },
   "manifest": {
     "host_permissions": [
