--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -1,3 +1,3 @@
-# Supabase config
+# Copy this into `.env.local` and fill in the values
 SUPABASE_URL=https://foobar.supabase.co
 SUPABASE_ANON_KEY=your_supabase_anon_key
