--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -33,6 +33,9 @@
     "typescript": "^5.3.2"
   },
   "dependencies": {
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.0.2",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "tailwind-merge": "^2.2.0"
   }
