landing page fun - thanks v0, josh comeau, uicolors

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,13 @@
     "@repo/ui": "workspace:*",
     "@supabase/ssr": "^0.0.10",
     "@supabase/supabase-js": "^2.39.1",
+    "lucide-react": "^0.300.0",
     "next": "^14.0.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-type-animation": "^3.2.0",
+    "react-wrap-balancer": "^1.1.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -24,6 +27,7 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/tailwind-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
     "@types/react-dom": "^18.2.17",
